Use Set.copyOf() for nonDefaultCoordinates() to improve immutability